R132: - updates changes and authors files (thanks Elio)

R131: - build script checks for existance of Univeral SDK

R130: - Building Universal binaries by default now
	updating changes and authors file (not done yet)

R127: - Set version to 0.21a

R126: - BugDaves changes in the documentation

R125: - Automatic reset code fix

R124: - Test -BEOFRE- committing!

R121: - Fix problem where advanced prefs wouldn't show up if they had never been set before

R120: - Add Nibs I missed.  When creating new Nibs, be sure to remove the .svn dir from inside the .nib package if you copied an older nib

R119: - Advanced Prefs from themacuser

R118: - Fixed AE Forever for real this time (maybe)

R114: - Fixed APs not being drawn on map (closes #12)
	  - Added sound feedback to crack attempts (updates #69 - awaiting added preference)
	  - Changed invalid location position to impossible values (closes #68 part 1)
	  - Improved auto-center behaviour for map and added shortcut key (closes #68 part 2 & #71)
	  - added commented pseudocode for trace inclusion in KML export (refer #72)
	  - added zoom limit patch for map download (re-closes #70)

R112: - fixing a security issue, discovered by Stefan Esser. was introduced with R54

R111: - Added Austrailan Map Server Closes #70 

R108: - Fixed #35, #36 and #54.  When not hopping, still set channel in hopping method.  This avoids a nasty race condition.

R107: - Fixed #51 - deleting a net causes kismac to crash
	  - Fixed #9 - used Geoffs patch to fix GPS update...

R106: - Fixed some silly warnings as described in #61 note, this is not the patch from 61 because it was incorrect

R102: - improved permanent airport extreme enabling & installing (even more)
	  - including removal
	  - fixed serveral small bugs
	  - added new "build system"

R101: - changes in spanish translation

R100:  This is a big commit, a present for R100.  
       -Added Client IP Address detection.  I need to think about ways to detect the ip of the ap if possible.